--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/excuse_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text='Fale "ok mad"'
         android:textSize="12pt"
         android:paddingLeft="10px"
         android:paddingRight="10px"
